<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_detail_banner"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:contentDescription="@string/banner" />

    <TextView
        android:id="@+id/movie_detail_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:text="@string/details"/>

    <TextView
        android:id="@+id/movie_detail_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"/>

    <TextView
        android:id="@+id/movie_detail_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/movie_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"/>

    <TextView
        android:id="@+id/movie_detail_trailer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:text="@string/trailer"/>

    <VideoView
        android:id="@+id/movie_detail_trailer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"/>

    <TextView
        android:id="@+id/movie_detail_review_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:text="@string/reviews"/>

</LinearLayout>
</ScrollView>